cmake_minimum_required(VERSION 3.22)
project(cache)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 23)
if (MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_STANDARD} /Zc:preprocessor /utf-8")
endif ()
if (UNIX)
    set(CMAKE_C_FLAGS " -Wall -Wextra -Wpedantic")
    set(CMAKE_C_FLAGS_DEBUG " -g")
    set(CMAKE_C_FLAGS_RELEASE "-march=native -flto -O3")
    set(CMAKE_CXX_FLAGS " -Wall -Wextra -Wpedantic")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-march=native -flto -O3")
endif ()
file(GLOB files *.cpp *.c)
foreach (file ${files})
    get_filename_component(x ${file} NAME_WLE)
    add_executable(${x} ${file})
    message("adding executable ${x}")
    target_link_libraries(${x})
    install(TARGETS ${x})
endforeach ()